fix orders and searchbar alignment on mobile

--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,6 @@ nav .container {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    align-items: center;
 }
 
 .dropdown {
@@ -333,6 +332,8 @@ a:hover {
     width: 80%;
   }
 
+  
+
   .ordersToolbar input {
     width: 80%;
   }
@@ -341,6 +342,10 @@ a:hover {
 @media (max-width: 768px) {
   body {
     padding: 1rem;
+  }
+
+  h1 {
+    text-align: center;
   }
 
   .ordersToolbar {
@@ -352,9 +357,12 @@ a:hover {
     margin-bottom: 0.5rem;
   }
 
-  
+  #orderList {
+    justify-content: center;
+  }
 
   .container {
+    max-width: 1200px;
     flex-direction: column;
     align-items: center;
     gap: 2rem;
